# VouVerTeAviso

./: .dockerignore  .gitignore  Dockerfile  README.md  anotações.txt  app.py  calendar_logic.py  db_teste.py  events_db.db  fly.toml  form.py  helpers copy.py  helpers.py  litefs.yml  pyproject.toml  tempCodeRunnerFile.py  teste.txt  todo.txt
.github/workflows/: fly-deploy.yml
Anotações/: SQL cola.txt  toques finais.txt
pasta_teste/: teste.txt
static/: event.js  index.js  script.js  styles.css
templates/: about.html  event.html  index.html  layout.html  process-data.html  styles.css  teste.html
