[project]
name = "vouverteaviso"
version = "0.1.0"
description = "Agende um evento com seus amigos!"
authors = [
    {name = "GabrielGRR",email = "gabrielguimaraesr.rocha@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "blinker==1.9.0",
    "click==8.1.8",
    "colorama==0.4.6",
    "Flask==3.1.0",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.5",
    "MarkupSafe==3.0.2",
    "pytz==2024.2",
    "Werkzeug==3.1.3",
    gunicorn = ">=23.0.0,<24.0.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
